fix: header image overflow in smaller screens

--- a/src/sections/projects/projects.module.scss
+++ b/src/sections/projects/projects.module.scss
@@ -3,22 +3,24 @@
     .projects__header {
         background: $primary;
         border-radius: $border-radius;
-        padding: $global-gap 2rem;
+        padding: calc(1.2 * $global-gap);
         display: flex;
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-
         .text {
             height: fit-content;
             width: 70%;
         }
 
         .image {
-            height: 15rem;
-
-            @media only screen and (max-width: $width-tablet) {
+            height: 17rem;
+            @media only screen and (max-width: 1050px) {
                 margin-inline: auto;
+            }
+            @media only screen and (max-width: $width-mobile) {
+                max-width: 100%;
+                object-fit: scale-down;
             }
         }
 
